examples/k8stest/conf/HTTPRoute/Match/Gateway.yaml
# HTTP Match  Gateway
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-match-gateway
  namespace: edgion-test
spec:
  gatewayClassName: public-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 31020
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 31021
      hostname: "*.example.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: http-match-tls
            namespace: edgion-test
